src/parser/snapshots/rbx_rsml__parser__tests__compiler_annotated_table_nested.snap
---
source: src/parser/mod.rs
expression: compiled.tree_nodes
---
TreeNodeGroup {
    root: Some(
        RootTreeNode {
            attributes: Attributes {
                data: {
                    "Val": Float32(
                        1.0,
                    ),
                },
            },
            static_attributes: {},
            child_rules: [],
        },
    ),
    nodes: [],
}
