src/parser/snapshots/rbx_rsml__parser__tests__compiler_assign_static_token.snap
---
source: src/parser/mod.rs
expression: compiled
---
CompiledRsml {
    root: Some(
        RootTreeNode {
            attributes: Attributes {
                data: {},
            },
            static_attributes: {
                "Padding": Variant(
                    UDim(
                        UDim {
                            scale: 0.0,
                            offset: 10,
                        },
                    ),
                ),
            },
            child_rules: [],
        },
    ),
    nodes: [],
    is_static: false,
}
