src/parser/snapshots/rbx_rsml__parser__tests__compiler_assign_static_token_missing_value.snap
---
source: src/parser/mod.rs
expression: compiled.tree_nodes
---
TreeNodeGroup {
    root: Some(
        RootTreeNode {
            attributes: Attributes {
                data: {},
            },
            static_attributes: {},
            child_rules: [],
        },
    ),
    nodes: [],
}
