src/parser/snapshots/rbx_rsml__parser__tests__compiler_assign_token_annotated_table.snap
---
source: src/parser/mod.rs
expression: compiled
---
CompiledRsml {
    root: Some(
        RootTreeNode {
            attributes: Attributes {
                data: {
                    "Size": UDim2(
                        UDim2 {
                            x: UDim {
                                scale: 1.0,
                                offset: 0,
                            },
                            y: UDim {
                                scale: 1.0,
                                offset: 0,
                            },
                        },
                    ),
                },
            },
            static_attributes: {},
            child_rules: [],
        },
    ),
    nodes: [],
}
